# blueberry-bot

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  bot.py  config.py  globals.py  google_sheets_test.py  pyproject.toml  requirements.txt
blueberry-bot/plugins/bbot_api/: __init__.py  config.py  emoji_def.py  sheets_api.py
blueberry-bot/plugins/bbot_mc_image/: __init__.py  mc_images_util.py
blueberry-bot/plugins/bbot_perms/: __init__.py  perms.py
blueberry-bot/plugins/bbot_render/: __init__.py  config.py  resource_server.py
blueberry-bot/plugins/commands/: __init__.py  config.py
blueberry-bot/plugins/dc_hook/: __init__.py  config.py
blueberry-bot/plugins/debug_helper/: __init__.py  config.py
blueberry-bot/plugins/gd_api/: __init__.py  file_based_cache.py
blueberry-bot/plugins/gdextras/: __init__.py  config.py  godot_draw.py
blueberry-bot/plugins/gdguess/: __init__.py  config.py  gd_api.py  guess_config.py  guess_session.py  guess_utils.py  pemonlist.py  thumbnail_api.py
blueberry-bot/plugins/guess/: __init__.py  guess_core.py  guess_data.py  handler_base.py  handler_dc.py  handler_mc.py  map_export_data  utils.py
blueberry-bot/plugins/gus/: __init__.py  gus_data.py
blueberry-bot/plugins/jrrp/: __init__.py
blueberry-bot/plugins/mc-commands/: __init__.py  config.py
blueberry-bot/plugins/mc-whitelist-sync/: __init__.py  config.py
bot_data/: .gitignore  data.py  entity_categories.json  map_names.json  map_paths.json
data_process/: .gitignore  entity_category_preprocess.py  entity_tag_utils.py  import_names.py  json_to_count.py  listMaps.py
data_process/names/: import_names.py  map_names.json
utils/: entity_utils.py
(+53 files in other folders)
