[project]
name = "blueberry-bot"
version = "0.1.0"
description = "blueberry-bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "Minecraft", module_name = "nonebot.adapters.minecraft" },
    { name = "Discord", module_name = "nonebot.adapters.discord" }
]
plugins = []
plugin_dirs = []
builtin_plugins = ["echo"]
