[project]
name = "blueberry-bot"
version = "0.1.0"
description = "blueberry-bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot-adapter-onebot>=2.4.6",
]

[tool.nonebot]
adapters = [
    { name = "Minecraft", module_name = "nonebot.adapters.minecraft" },
    { name = "Discord", module_name = "nonebot.adapters.discord" },
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}
]
plugins = []
plugin_dirs = ["blueberry-bot/plugins"]
builtin_plugins = []
