[project]
name = "blueberry-bot"
version = "0.1.0"
description = "blueberry-bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-adapter-qq>=1.7.1",
]

[tool.nonebot]
adapters = [
    { name = "Minecraft", module_name = "nonebot.adapters.minecraft" },
    { name = "Discord", module_name = "nonebot.adapters.discord" },
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"},
    {name = "QQ", module_name = "nonebot.adapters.qq"}
]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["blueberry-bot/plugins"]
builtin_plugins = []
